first experiments added

--- a/quickstart.ipynb
+++ b/quickstart.ipynb
@@ -11,34 +11,23 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/jqmviegas/jqm_cvi.git\n",
-      "  Cloning https://github.com/jqmviegas/jqm_cvi.git to c:\\users\\jeson\\appdata\\local\\temp\\pip-req-build-b72uvf13\n",
+      "  Cloning https://github.com/jqmviegas/jqm_cvi.git to /private/var/folders/t4/1zgf4p9x29d9pxmkw5z_x0100000gn/T/pip-req-build-fd7bl8jj\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/jqmviegas/jqm_cvi.git /private/var/folders/t4/1zgf4p9x29d9pxmkw5z_x0100000gn/T/pip-req-build-fd7bl8jj\n",
       "  Resolved https://github.com/jqmviegas/jqm_cvi.git to commit 9e1137d4f4df70c1287011e1a544b0c3fe36af36\n",
-      "  Preparing metadata (setup.py): started\n",
-      "  Preparing metadata (setup.py): finished with status 'done'\n",
-      "Building wheels for collected packages: jqmcvi\n",
-      "  Building wheel for jqmcvi (setup.py): started\n",
-      "  Building wheel for jqmcvi (setup.py): finished with status 'done'\n",
-      "  Created wheel for jqmcvi: filename=jqmcvi-1.0-cp39-cp39-win_amd64.whl size=84365 sha256=4ff72dbc03a37ba2f7961b8091b4008e80b1485cbe2a804b495ce1d5c8c499b6\n",
-      "  Stored in directory: C:\\Users\\jeson\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-xov145x0\\wheels\\8c\\53\\48\\fa640c05477263e265eaf1c7fd337aeef8ba6e74b60ffd00bd\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hBuilding wheels for collected packages: jqmcvi\n",
+      "  Building wheel for jqmcvi (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for jqmcvi: filename=jqmcvi-1.0-cp39-cp39-macosx_10_9_x86_64.whl size=87048 sha256=6f8710bacabe2b63e323ac27d267f5a1161d4eb2a005c2fec051a95f27006f26\n",
+      "  Stored in directory: /private/var/folders/t4/1zgf4p9x29d9pxmkw5z_x0100000gn/T/pip-ephem-wheel-cache-ps380lxa/wheels/8c/53/48/fa640c05477263e265eaf1c7fd337aeef8ba6e74b60ffd00bd\n",
       "Successfully built jqmcvi\n",
       "Installing collected packages: jqmcvi\n",
       "Successfully installed jqmcvi-1.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  Running command git clone --filter=blob:none --quiet https://github.com/jqmviegas/jqm_cvi.git 'C:\\Users\\jeson\\AppData\\Local\\Temp\\pip-req-build-b72uvf13'\n",
-      "\n",
-      "[notice] A new release of pip available: 22.3.1 -> 23.3.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
     }
    ],
    "source": [
-    "pip install git+https://github.com/jqmviegas/jqm_cvi.git "
+    "pip install git+https://github.com/jqmviegas/jqm_cvi.git"
    ]
   },
   {
@@ -60,11 +49,11 @@
    "source": [
     "# Application of Time2Feat on real dataset\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from t2f.extraction.extractor import feature_extraction\n",
     "from t2f.utils.importance_old import feature_selection\n",
     "from t2f.model.clustering import ClusterWrapper\n",
     "from t2f.data.dataset import read_ucr_datasets\n",
-    "from typing import List, Literal, Optional\n",
     "import os\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import adjusted_mutual_info_score\n",
@@ -117,7 +106,15 @@
    "execution_count": 2,
    "id": "db778a94",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Feature Extraction: 100%|██████████| 480/480 [00:17<00:00, 26.84it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "df_all_feats = feature_extraction(ts_list, batch_size, p)"
    ]
@@ -572,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "54614dde",
    "metadata": {},
    "outputs": [],
@@ -580,14 +577,12 @@
     "import random\n",
     "from tsfresh.utilities.dataframe_functions import impute\n",
     "import gym\n",
-    "from gym import spaces\n",
-    "\n",
-    "from sklearn.metrics import silhouette_score"
+    "from gym import spaces"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "1cff4546",
    "metadata": {},
    "outputs": [
@@ -1013,7 +1008,7 @@
        "[80 rows x 3336 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "21f73709-30af-447a-9857-dbaf7fc3f29e",
    "metadata": {},
    "outputs": [],
@@ -1061,9 +1056,10 @@
     "\n",
     "def normalized_DBS(df_feat_all, y_pred):\n",
     "    dbs = davies_bouldin_score(df_feat_all, y_pred)\n",
-    "    score = 1 - ((dbs - upperLimit)/(0-upperLimit))\n",
+    "    print('dbs:', dbs)\n",
     "    if dbs > upperLimit:\n",
     "        dbs = upperLimit\n",
+    "    score = ((dbs - upperLimit)/(0-upperLimit))\n",
     "    print('DBS Score: ' + str(score))\n",
     "    return score\n",
     "\n",
@@ -1077,7 +1073,7 @@
     "\n",
     "\n",
     "def normalized_DuS(df_feat_all, y_pred): \n",
-    "    dus =  (df_feat_all, y_pred)\n",
+    "    dus = dunn_fast(df_feat_all, y_pred)\n",
     "    if dus > upperLimit:\n",
     "        dus = upperLimit\n",
     "    score = dus/upperLimit\n",
@@ -1093,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "fcdfdfaa-3be2-48ec-870b-55943546105a",
    "metadata": {},
    "outputs": [],
@@ -1103,12 +1099,13 @@
     "    scoreCHS = normalized_CHS(df_feat_all, y_pred)\n",
     "    scoreDuS = normalized_DuS(df_feat_all, y_pred)\n",
     "    scoreSilS = normalized_SilS(df_feat_all, y_pred)\n",
-    "    return scoreDBS + scoreCHS + scoreDuS + scoreSilS"
+    "    scores = [scoreDBS, scoreCHS, scoreDuS, scoreSilS]\n",
+    "    return np.mean(scores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "e06e6983",
    "metadata": {},
    "outputs": [],
@@ -1177,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "697de214",
    "metadata": {},
    "outputs": [],
@@ -1215,6 +1212,11 @@
     "        y_pred = self.clustering_model.fit_predict(self.all_features[selected_features])\n",
     "        \n",
     "        try:\n",
+    "            \"\"\"\n",
+    "            Test to see if this works well, otherwise we have two current options:\n",
+    "            (1) Use only the features selected by RL to compute metrics\n",
+    "            (2) Use raw time series to compute metrics\n",
+    "            \"\"\"\n",
     "            score = obtain_score(df_all_feats, y_pred)\n",
     "            # score = silhouette_score(ts_list, y_pred)\n",
     "        except ValueError:\n",
@@ -1251,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "ecb7394f",
    "metadata": {},
    "outputs": [
@@ -1260,43 +1262,49 @@
      "output_type": "stream",
      "text": [
       "Episode 0\n",
-      "Action: 337\n",
-      "DBS Score: 0.0038451944590986997\n",
-      "CHS Score: 0.016305299943328192\n",
-      "DuS Score: 0.00011396146389260398\n",
-      "SilS Score: 0.6086152396850134\n",
-      "0.6288796955513329\n",
-      "Action: 3276\n",
-      "DBS Score: 0.006534742298760832\n",
-      "CHS Score: 0.017911344775686924\n",
-      "DuS Score: 6.765207431496421e-05\n",
-      "SilS Score: 0.4376661434389676\n",
-      "-0.16669981296360264\n",
-      "Action: 2911\n",
-      "DBS Score: 0.0015243329671995598\n",
-      "CHS Score: 0.019874694543028936\n",
-      "DuS Score: 6.732405526088686e-05\n",
-      "SilS Score: 0.4141423316295575\n",
-      "-0.02657119939268343\n",
+      "Action: 13\n",
+      "dbs: 1.5378054164865542\n",
+      "DBS Score: 0.9984621945835135\n",
+      "CHS Score: 0.03842841673994315\n",
+      "DuS Score: 7.81306894355731e-05\n",
+      "SilS Score: 0.5387635508596669\n",
+      "0.39393307321813975\n",
+      "Action: 3222\n",
+      "dbs: 1.876031435632649\n",
+      "DBS Score: 0.9981239685643674\n",
+      "CHS Score: 0.1630820343041435\n",
+      "DuS Score: 0.00015129269026743802\n",
+      "SilS Score: 0.6272293293168947\n",
+      "0.0532135830007785\n",
+      "Action: 1154\n",
+      "dbs: 6.103249890044874\n",
+      "DBS Score: 0.9938967501099552\n",
+      "CHS Score: 0.04446595398330799\n",
+      "DuS Score: 9.342347413927589e-05\n",
+      "SilS Score: 0.500368492782494\n",
+      "-0.06244050113144417\n",
       "Episode 1\n",
-      "Action: 0\n",
-      "DBS Score: 0.0015900240520623221\n",
-      "CHS Score: 0.008901667076289047\n",
-      "DuS Score: 6.752203129871531e-05\n",
-      "SilS Score: 0.44217102804770675\n",
-      "0.017121558012309968\n",
-      "Action: 367\n",
-      "DBS Score: 0.005324866636197245\n",
-      "CHS Score: 0.04015461631578801\n",
-      "DuS Score: 7.012078599802936e-05\n",
-      "SilS Score: 0.5186392651901057\n",
-      "0.11145862772073223\n",
-      "Action: 1\n",
-      "DBS Score: 0.005490095943572859\n",
-      "CHS Score: 0.008946780145617292\n",
-      "DuS Score: 6.868183226975705e-05\n",
-      "SilS Score: 0.4175113503726672\n",
-      "-0.13217196063396197\n"
+      "Action: 1481\n",
+      "dbs: 7.186300320020237\n",
+      "DBS Score: 0.9928136996799798\n",
+      "CHS Score: 0.0020168139258715887\n",
+      "DuS Score: 6.76504499484022e-05\n",
+      "SilS Score: 0.44529163065056443\n",
+      "-0.024658706410883025\n",
+      "Action: 1719\n",
+      "dbs: 6.683146189497698\n",
+      "DBS Score: 0.9933168538105023\n",
+      "CHS Score: 0.0021776634941127015\n",
+      "DuS Score: 6.790104538891928e-05\n",
+      "SilS Score: 0.4583347378974689\n",
+      "0.00342684038527713\n",
+      "Action: 2013\n",
+      "dbs: 13.230237843360742\n",
+      "DBS Score: 0.9867697621566393\n",
+      "CHS Score: 0.0005058164346405902\n",
+      "DuS Score: 7.81306894355731e-05\n",
+      "SilS Score: 0.4215629715261724\n",
+      "-0.01124511886014623\n"
      ]
     }
    ],
@@ -1406,7 +1414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
